--- a/css/style.css
+++ b/css/style.css
@@ -479,7 +479,7 @@ header.header.sticky {
     width: 320px;
     opacity: 0.99;
     display: block;
-    background: url(../images/bike\ b1.png) no-repeat top left/cover;
+    background: url(../images/Me-1.jpg) no-repeat top left/cover;
 }
 .about-section .about-img2 {
     position: relative;
